[package]
name = "OopsTime"
version = "0.1.0"
description = "A Tauri App"
authors = ["KATOI <katoi4423@gmail.com"]
edition = "2021"
license = "MIT OR Apache-2.0"

[package.metadata]
aumid = "com.oopstime.app"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "oopstime_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
cargo_metadata = { version = "*" }
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = { version = "*" }
log = { version = "*" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
simplelog = { version = "*" }
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
windows = {version = "*", features = [
	"Win32_System_LibraryLoader",
	"Win32_System_Threading",
	"Win32_UI_WindowsAndMessaging",
] }
windows-core = { version = "*" }
winrt-toast = { version = "*" }
