[package]
name = "OopsTime"
version = "0.1.0"
description = "A Tauri App"
authors = ["KATOI <katoi4423@gmail.com"]
edition = "2021"
license = "MIT OR Apache-2.0"

[package.metadata]
aumid = "com.oopstime.app"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "oopstime_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
cargo_metadata = { version = "*" }
tauri-build = { version = "2.1.1", features = [] }

[dependencies]
anyhow = { version = "1.0.98" }
chrono = { version = "0.4.40" }
clap = { version = "4.5.37", features = ["derive"] }
flexi_logger = { version = "0.30.1" }
log = { version = "0.4.27" }
once_cell = { version = "1.21.3" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.5.1", features = [] }
tauri-plugin-opener = "2.2.6"
toml = { version = "0.8.21" }
windows = {version = "0.61.1", features = [
	"Win32_System_LibraryLoader",
	"Win32_System_Threading",
	"Win32_UI_Input_Ime",
	"Win32_UI_Input_KeyboardAndMouse",
	"Win32_UI_WindowsAndMessaging",
] }
windows-core = { version = "0.61.0" }
winrt-toast = { version = "*" }
